# end_of_sem

./: .gitignore  CMakeLists.txt  README.md  admin.cc  battery.cc  build.bat  build.ps1  build.sh  database.cc  main.cc  menus.cc
data/: admins.txt  batteries.txt  drivers.txt
headers/: admin.h  battery.h  colors.h  constants.h  database.h  driver.h  menus.h
